--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.2.2",
+    "method-override": "^3.0.0",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.3.0",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
+    "node": "^20.2.0",
+    "openai": "^3.3.0",
     "redux": "^4.2.1"
   }
 }
